--- a/templates/plex-overlay.xml
+++ b/templates/plex-overlay.xml
@@ -1,13 +1,13 @@
 <Container>
   <Name>plex-overlay</Name>
-  <Repository>youruser/plex-overlay</Repository>
-  <Registry>https://hub.docker.com/r/youruser/plex-overlay</Registry>
+  <Repository>mbirnbach/plex-overlay</Repository>
+  <Registry>https://hub.docker.com/r/mbirnbach/plex-overlay</Registry>
   <Network>bridge</Network>
   <MyIP/>
   <Shell>sh</Shell>
   <Privileged>false</Privileged>
-  <Support>https://github.com/youruser/plex-overlay/issues</Support>
-  <Project>https://github.com/youruser/plex-overlay</Project>
+  <Support>https://github.com/mbirnbach/plex-overlay/issues</Support>
+  <Project>https://github.com/mbirnbach/plex-overlay</Project>
   <Overview>A self-contained Docker container that listens to Plex webhooks and shows a Now Playing poster. Ideal for dashboards like DAKboard.</Overview>
   <Category>MediaServer:Tools</Category>
   <WebUI>http://[IP]:[STATIC_PORT]/now-playing.png</WebUI>
